--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <div class="content">
     <h4>Hello, my name is </h4>
-    <h1>Shrijay Gauns</h1>
+    <h1><i>Shrijay Gauns</i></h1>
     <h3>I'am a Web Designer</h3>
     
     </div>
