--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="content">
     <h4>Hello, my name is </h4>
     <h1><i>Shrijay Gauns</i></h1>
-    <h3>I'am a Web Designer</h3>
+    <h3><span>I'am a Web Designer</span></h3>
     
     </div>
 </div>
